[tool.poetry]
name = "cougar-log"
version = "0.1.1"
description = ""
authors = ["Weaver Goldman <we.goldm@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cougar-log = "cougar_log.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.1"}
tabulate = "^0.8.10"
matplotlib = "^3.5.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mkdocs-typer = "^0.0.2"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
